HybridSearch_example/kubernetes/nrp-prod/gradio-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gradio-ui
spec:
  selector:
    matchLabels:
      app: gradio-ui
  template:
    spec:
      containers:
        - name: gradio-ui
